test/mutation_analysis/s0165_compare_version_numbers/hafis/ablation_o3_full/mutants/22/result.txt
./test/mutation_analysis/s0165_compare_version_numbers/hafis/ablation_o3_full/mutants/22/Solution.java:26: error: unreachable statement
        for (j = 0; false; j++) {
                                ^
1 error
